// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders snapshot with DaySelector 1`] = `
<header
  class="flex flex-wrap justify-between items-center
         p-4"
>
  <nav
    aria-label="Haupt"
    class="flex justify-center
           w-full sm:w-auto
           px-4 pb-2 sm:pb-0"
  >
    <ul
      class="flex list-none p-0"
    >
      <navlink-stub
        exact="true"
        to="/"
      >
        <offersicon-stub />
      </navlink-stub>
       
      <navlink-stub
        to="/settings"
      >
        <settingsicon-stub />
      </navlink-stub>
       
      <navlink-stub
        to="/about"
      >
        <infoicon-stub />
      </navlink-stub>
    </ul>
  </nav>
   
  <div
    class="flex items-center justify-center sm:justify-start
           sm:order-first
           w-full sm:h-16 sm:max-w-sm"
  >
    <h1
      class="px-4 text-2xl text-neutral-800 sr-only"
    >
      
      Mock-Title
    
    </h1>
     
    <dayselector-stub
      class="w-full"
    />
  </div>
</header>
`;

exports[`Header renders snapshot with title as h1 tag 1`] = `
<header
  class="flex flex-wrap justify-between items-center
         p-4"
>
  <nav
    aria-label="Haupt"
    class="flex justify-center
           w-full sm:w-auto
           px-4 pb-2 sm:pb-0"
  >
    <ul
      class="flex list-none p-0"
    >
      <navlink-stub
        exact="true"
        to="/"
      >
        <offersicon-stub />
      </navlink-stub>
       
      <navlink-stub
        to="/settings"
      >
        <settingsicon-stub />
      </navlink-stub>
       
      <navlink-stub
        to="/about"
      >
        <infoicon-stub />
      </navlink-stub>
    </ul>
  </nav>
   
  <div
    class="flex items-center justify-center sm:justify-start
           sm:order-first
           w-full sm:h-16 sm:max-w-sm"
  >
    <h1
      class="px-4 text-2xl text-neutral-800"
    >
      
      Mock-Title
    
    </h1>
     
    <!---->
  </div>
</header>
`;
